--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Lukas",
   "license": "ISC",
   "dependencies": {
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "moment": "^2.27.0"
   }
 }
