--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "bank transaction fee calculation task",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Lukas",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.2.0",
     "fs": "0.0.1-security",
+    "mocha": "^8.0.1",
     "moment": "^2.27.0"
   }
 }
