--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "bank transaction fee calculation task",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node app.js input.json"
   },
   "author": "Lukas",
   "license": "ISC",
